--- a/Notes/AppShell.xaml
+++ b/Notes/AppShell.xaml
@@ -4,18 +4,33 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:Notes.Views"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout">
 
+    <!-- Flyout Items -->
+    <FlyoutItem Title="Notes" Icon="icon_notes.png">
+        <ShellContent
+            Title="Notes"
+            ContentTemplate="{DataTemplate views:AllNotesPage}"
+            Icon="icon_notes.png" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="About" Icon="icon_about.png">
+        <ShellContent
+            Title="About"
+            ContentTemplate="{DataTemplate views:AboutPage}"
+            Icon="icon_about.png" />
+    </FlyoutItem>
+
+    <!-- Tabs -->
     <TabBar>
         <ShellContent
             Title="Notes"
             ContentTemplate="{DataTemplate views:AllNotesPage}"
-            Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
-
+            Icon="icon_notes.png" />
         <ShellContent
             Title="About"
             ContentTemplate="{DataTemplate views:AboutPage}"
-            Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
+            Icon="icon_about.png" />
     </TabBar>
 
 </Shell>
