--- a/Notes/Views/AboutPage.xaml
+++ b/Notes/Views/AboutPage.xaml
@@ -3,21 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Notes.Models"
              x:Class="Notes.Views.AboutPage"
-             Title="Mathias Vera">
+             Title="About">
     <ContentPage.BindingContext>
         <models:About />
     </ContentPage.BindingContext>
-    <VerticalStackLayout Spacing="10" Margin="10">
-        <HorizontalStackLayout Spacing="10">
-            <Image Source="dotnet_bot.png"
-                   SemanticProperties.Description="The dot net bot waving hello!"
-                   HeightRequest="64" />
-            <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
-            <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
-        </HorizontalStackLayout>
+    <ScrollView>
+        <VerticalStackLayout Spacing="10" Margin="10">
+            <Label FontSize="Subtitle" FontAttributes="Bold" Text="Mathias Vera" HorizontalOptions="Center" />
+            <Label FontSize="Body" Text="Soy estudiante de ingeniería en software cursando el 5to semestre, me gustan los musicales y leer" HorizontalOptions="Center" Margin="0,10" />
 
-        <Label Text="{Binding Message}" />
-        <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
-    </VerticalStackLayout>
+            <Image Source="bobpreocupado.png"
+                   Aspect="AspectFill"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center" />
+
+            <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
+        </VerticalStackLayout>
+    </ScrollView>
+    
 
 </ContentPage>
